mejoras sección main

--- a/index.html
+++ b/index.html
@@ -30,11 +30,29 @@ By Sebastián Sánchez -->
         <!-- Sección principal superior -->
         <main class="main">
             <div class="main_container">
-                <h2>Novedades</h2>
-                <div class="main_highlight">
-                    <!-- El highlight es una card más grande, y la columna del costado, son cards con la img de lado (variación) -->
-                    <img class="main_highlight--img" src="./assets/imgs/posts/bootstrap.png" alt="logo de Bootstrap">
-
+                <h2 class="main_title">Novedades</h2>
+                <!-- El highlight es una card más grande, y la columna del costado, son cards con la img de lado (variación) -->
+                <div class="main_posts">
+                    <div class="card-post card-post--XL">
+                        <img class="card-post_img--XL" src="./assets/imgs/posts/bootstrap.png" alt="logo Vue">
+                        <span class="card-post_date">24 de noviembre, 2024</span>
+                        <span class="card-post_title card-post_title--XL">Modifica el tema de Bootstrap con variantes CSS</span>
+                        <div class="card-post_user">
+                            <img class="card-post_user--round" src="./assets/imgs/logos/adl.png">
+                            <span class="card-post_username">Desafío Latam</span>
+                        </div>
+                    </div>
+                    <div class="card-post card-post--horiz">
+                        <img class="card-post_img card-post_img--horiz" src="./assets/imgs/posts/vue-components.png" alt="logo Vue">
+                        <div class="card-post_info--horiz">
+                            <span class="card-post_date card-post_date--horiz">24 de noviembre, 2024</span>
+                            <span class="card-post_title card-post_title--horiz">Componentes Vue</span>
+                            <div class="card-post_user card-post_user--horiz">
+                                <img class="card-post_user--round" src="./assets/imgs/logos/adl.png">
+                                <span class="card-post_username">Desafío Latam</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
@@ -43,7 +61,9 @@ By Sebastián Sánchez -->
         <section class="popular-and-categories">
             <!-- Sección de cards -->
                 <article class="popular-cards">
-                    <h2 class="popular-and-categories_title">Populares</h2>
+                    
+                    <h2 class="popular_title">Populares</h2>
+                    <div>
                     <div class="card-post">
                         <img class="card-post_img" src="./assets/imgs/posts/vue-components.png" alt="logo Vue">
                         <span class="card-post_date">24 de noviembre, 2024</span>
@@ -116,6 +136,7 @@ By Sebastián Sánchez -->
                     </div>
                     <span class="list-item_link">Ver todas las categorías ></span>
                 </aside>
+            </div>
         </section>
         <hr class="divider">
     </div>    
