fix de la sección main superior

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ By Sebastián Sánchez -->
     <div class="container">
         <!-- Cabecera -->
         <header class="header">
-            <img class="header_logo--img" src="./assets/imgs/logos/adl.png">
-            <span class="header_title--txt">Blog front end</span>
+            <img class="header_logo" src="./assets/imgs/logos/adl.png">
+            <span class="header_title">Blog front end</span>
         </header>
         <hr class="divider">
         
@@ -42,14 +42,38 @@ By Sebastián Sánchez -->
                             <span class="card-post_username">Desafío Latam</span>
                         </div>
                     </div>
-                    <div class="card-post card-post--horiz">
-                        <img class="card-post_img card-post_img--horiz" src="./assets/imgs/posts/vue-components.png" alt="logo Vue">
-                        <div class="card-post_info--horiz">
-                            <span class="card-post_date card-post_date--horiz">24 de noviembre, 2024</span>
-                            <span class="card-post_title card-post_title--horiz">Componentes Vue</span>
-                            <div class="card-post_user card-post_user--horiz">
-                                <img class="card-post_user--round" src="./assets/imgs/logos/adl.png">
-                                <span class="card-post_username">Desafío Latam</span>
+                    <div class="main_anteriores">
+                        <div class="card-post card-post--horiz">
+                            <img class="card-post_img card-post_img--horiz" src="./assets/imgs/posts/Herencia-JS.png" alt="logo Vue">
+                            <div class="card-post_info--horiz">
+                                <span class="card-post_date card-post_date--horiz">24 de noviembre, 2024</span>
+                                <span class="card-post_title card-post_title--horiz">Herencia en JavaScript</span>
+                                <div class="card-post_user card-post_user--horiz">
+                                    <img class="card-post_user--round" src="./assets/imgs/logos/adl.png">
+                                    <span class="card-post_username--horiz">Desafío Latam</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-post card-post--horiz">
+                            <img class="card-post_img card-post_img--horiz" src="./assets/imgs/posts/Etiquetas-semánticas-HTML.png" alt="logo Vue">
+                            <div class="card-post_info--horiz">
+                                <span class="card-post_date card-post_date--horiz">24 de noviembre, 2024</span>
+                                <span class="card-post_title card-post_title--horiz">Etiquetas semánticas</span>
+                                <div class="card-post_user card-post_user--horiz">
+                                    <img class="card-post_user--round" src="./assets/imgs/logos/adl.png">
+                                    <span class="card-post_username--horiz">Desafío Latam</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-post card-post--horiz">
+                            <img class="card-post_img card-post_img--horiz" src="./assets/imgs/posts/reactComponents.png" alt="logo Vue">
+                            <div class="card-post_info--horiz">
+                                <span class="card-post_date card-post_date--horiz">24 de noviembre, 2024</span>
+                                <span class="card-post_title card-post_title--horiz">Componentes React</span>
+                                <div class="card-post_user card-post_user--horiz">
+                                    <img class="card-post_user--round" src="./assets/imgs/logos/adl.png">
+                                    <span class="card-post_username--horiz">Desafío Latam</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -61,44 +85,44 @@ By Sebastián Sánchez -->
         <section class="popular-and-categories">
             <!-- Sección de cards -->
                 <article class="popular-cards">
-                    
-                    <h2 class="popular_title">Populares</h2>
-                    <div>
-                    <div class="card-post">
-                        <img class="card-post_img" src="./assets/imgs/posts/vue-components.png" alt="logo Vue">
-                        <span class="card-post_date">24 de noviembre, 2024</span>
-                        <span class="card-post_title">Componentes Vue</span>
-                        <div class="card-post_user">
-                            <img class="card-post_user--round" src="./assets/imgs/logos/adl.png">
-                            <span class="card-post_username">Desafío Latam</span>
+                    <h2 class="popular-cards_title">Populares</h2>
+                    <div class="popular-cards_line">
+                        <div class="card-post">
+                            <img class="card-post_img" src="./assets/imgs/posts/vue-components.png" alt="logo Vue">
+                            <span class="card-post_date">24 de noviembre, 2024</span>
+                            <span class="card-post_title">Componentes Vue</span>
+                            <div class="card-post_user">
+                                <img class="card-post_user--round" src="./assets/imgs/logos/adl.png">
+                                <span class="card-post_username">Desafío Latam</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card-post">
-                        <img class="card-post_img" src="./assets/imgs/posts/api-js.png" alt="API de JavaScript">
-                        <span class="card-post_date">24 de noviembre, 2024</span>
-                        <span class="card-post_title">Consumo de API con JavaScript</span>
-                        <div class="card-post_user">
-                            <img class="card-post_user--round" src="./assets/imgs/logos/adl.png">
-                            <span class="card-post_username">Desafío Latam</span>
+                        <div class="card-post">
+                            <img class="card-post_img" src="./assets/imgs/posts/api-js.png" alt="API de JavaScript">
+                            <span class="card-post_date">24 de noviembre, 2024</span>
+                            <span class="card-post_title">Consumo de API con JavaScript</span>
+                            <div class="card-post_user">
+                                <img class="card-post_user--round" src="./assets/imgs/logos/adl.png">
+                                <span class="card-post_username">Desafío Latam</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card-post">
-                        <img class="card-post_img" src="./assets/imgs/posts/sass.jpg" alt="logo Sass">
-                        <span class="card-post_date">24 de noviembre, 2024</span>
-                        <span class="card-post_title">CSS reutilizable con Sass</span>
-                        <div class="card-post_user">
-                            <img class="card-post_user--round" src="./assets/imgs/logos/adl.png">
-                            <span class="card-post_username">Desafío Latam</span>
+                        <div class="card-post">
+                            <img class="card-post_img" src="./assets/imgs/posts/sass.jpg" alt="logo Sass">
+                            <span class="card-post_date">24 de noviembre, 2024</span>
+                            <span class="card-post_title">CSS reutilizable con Sass</span>
+                            <div class="card-post_user">
+                                <img class="card-post_user--round" src="./assets/imgs/logos/adl.png">
+                                <span class="card-post_username">Desafío Latam</span>
+                            </div>
                         </div>
+                        <div class="card-post">
+                            <img class="card-post_img" src="./assets/imgs/posts/bootstrap.png" alt="logo Sass">
+                            <span class="card-post_date">24 de noviembre, 2024</span>
+                            <span class="card-post_title">Componentes Bootstrap</span>
+                            <div class="card-post_user">
+                                <img class="card-post_user--round" src="./assets/imgs/logos/adl.png">
+                                <span class="card-post_username">Desafío Latam</span>
+                            </div>
                     </div>
-                    <div class="card-post">
-                        <img class="card-post_img" src="./assets/imgs/posts/bootstrap.png" alt="logo Sass">
-                        <span class="card-post_date">24 de noviembre, 2024</span>
-                        <span class="card-post_title">Componentes Bootstrap</span>
-                        <div class="card-post_user">
-                            <img class="card-post_user--round" src="./assets/imgs/logos/adl.png">
-                            <span class="card-post_username">Desafío Latam</span>
-                        </div>       
                 </article>
                 <aside class="categories-list">
                     <h2>Categorías</h2>
